@@ -21,13 +21,16 @@ Changes
 Fixes
 =====
 
+ - Wrong results were returned from queries with more than one level
+   of nested subselects.
+
  - ``ORDER BY`` on joins caused incorrect order of values when having multiple
    non-distinct values on the left part of the join. Now ``ORDER BY`` is
    correctly applied.
 
- - Fix: Appereance of NPE during startup of crate
+ - Fix: Appearance of NPE during startup of crate
 
- - Fix: Log4j would yield a "No log4j2 configuration file found" error when 
+ - Fix: Log4j would yield a "No log4j2 configuration file found" error when
    shutting down crate ungracefully (via kill signal)
 
  - Fix: Restoring empty partitioned tables wasn't possible
